# GrandAdventure

./: CMakeLists.txt  README.md  function_test.cpp  function_test.h  main.cpp
.qtcreator/: CMakeLists.txt.user.a6f71ab  CMakeLists.txt.user.ce65433
DOUCUEMENTS/: 项目概述与设计目标.txt
Documents/: Needs.txt  Project_skeleton.txt  development_logic.txt  push_dee.txt
GameBox/: CMakeLists.txt  Window.qml  main.cpp
GameBox/cpp/: gamemanager.cpp
GameBox/include/: gamemanager.h
Resource/bgc/: obstacles.json
qml/: GameCanvas.qml
src/: main.cpp
src/core/: GameApplication.cpp  GameApplication.h  GameObject.cpp  GameObject.h  Scene.h  SceneManager.cpp  SceneManager.h
src/gameobjects/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  PaimonEnemy.cpp  PaimonEnemy.h  exporb.cpp  exporb.h
src/scenes/: CharacterSelectScene.cpp  CharacterSelectScene.h  DeathScene.cpp  DeathScene.h  PlayScene.cpp  PlayScene.h
src/ui/: MainWindow.cpp  MainWindow.h
